Fix some layout issues on the resume

--- a/app/stylesheets/stylesheet.sass
+++ b/app/stylesheets/stylesheet.sass
@@ -332,6 +332,9 @@ body
 .hidden
   display: none
 
+.bold
+  font-weight: bold
+
 blockquote
   margin: 6px 18px
   padding: 10px
